Fix banner search spacing and adds spacing around date/time form fields.

--- a/scss/components/_banner-search.scss
+++ b/scss/components/_banner-search.scss
@@ -5,6 +5,7 @@
 
 %banner-search__block,
 .banner-search__block {
+  flex: 1;
   text-decoration: none;
 }
 
@@ -13,6 +14,7 @@
   display: block;
   position: relative;
   width: 100%;
+  height: 50px;
 }
 
 %banner-search__item-wrapper,
