--- a/scss/root/_forms.scss
+++ b/scss/root/_forms.scss
@@ -133,6 +133,12 @@ input {
       }
     }
   }
+
+  &[type='date'],
+  &[type='time'] {
+    margin-bottom: $spacing-small;
+    padding: $spacing-small;
+  }
 }
 
 select {
